Attempting fix for input issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -514,7 +514,7 @@ h1.title > span {
   margin-bottom: 2em;
 }
 
-/* Desktop styles */
+/* Desktop */
 
 @media (min-width: 900px) {
 
@@ -537,7 +537,7 @@ h1.title > span {
 
 /******** FAQ Styles *************/
 
-/* Mobile styles */
+/* Mobile */
 
 .faqs {
  width: 100%;
@@ -724,34 +724,24 @@ form > h4 {
   
 }
 
-input {
+input[type=text] {
   width: 90%;
   border: none;
-  /* box-shadow: 3px 5px 10px #ccc; */
   padding: 1em;
   border-radius: 10px;
   font-family: var(--ff-sans);
   text-align: center;
   font-weight: 700;
   font-size: 16px;
-  --webkit-appearance: none;
-  --webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, .25), inset 2px 2px 3px rgba(0, 0, 0, .2);
-  --moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, .25), inset 2px 2px 3px rgba(0, 0, 0, 0.2);
+  -webkit-appearance: none;
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, .25), inset 2px 2px 3px rgba(0, 0, 0, .2);
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, .25), inset 2px 2px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, .25), inset 2px 2px 3px rgba(0, 0, 0, .2);
 
 }
 
 input:focus {
   outline-color: var(--clr-light-green);
-}
-
-label {
-  font-family: var(--ff-sans);
-  text-transform: uppercase;
-  font-weight: 800;
-  letter-spacing: 1px;
-  color: var(--clr-black);
-  justify-self: end;
 }
 
 .calculate-btn {
